--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,7 +11,7 @@
   Originality. This study offers a data-driven update to a 21-criterion credibility model, identifying the most influential criteria in terms of conceptual importance and applicability in evaluating the trustworthiness and expertise of information on peer-based, collaborative platforms. Also, it suggests potential to extend the framework to emerging environments such as generative artificial intelligence, where criteria like reference reliability remain relevant.},
   selected={true},
   doi={https://doi.org/10.1108/EL-05-2025-0188},
-  preprint={2025-TEL-Preprint.pdf},
+  pdf={2025-TEL-Preprint.pdf},
   preview={el.png}
 }
 
@@ -481,6 +481,23 @@
   preview={2015-66-12-jasist.jpg}
 }
 
+@article{stvilia2015mobile,
+  title={Mobile wellness application-seeking behavior by college students—An exploratory study},
+  author={Stvilia, Besiki and Choi, Wonchan},
+  journal={Library \& Information Science Research},
+  volume={37},
+  number={3},
+  pages={201--208},
+  year={2015},
+  publisher={Elsevier},
+  doi={https://doi.org/10.1016/j.lisr.2015.04.007},
+  abstract={This research explored the mobile wellness application-seeking behavior of college students. In particular, it examined what sources students used to obtain wellness information, what wellness applications students used and for what purposes, how they learned about those applications, and what factors influenced their decision to choose a particular wellness application from multiple alternatives. The results indicated that students most often used websites as sources of wellness information, followed by mobile applications, family and friends, and then physicians. Students most often learned about wellness applications from search engines and application stores. Physicians were the least mentioned source of learning about mobile wellness applications. The most popular application type was calorie and activity trackers. In addition, when asked to rate the importance of various mobile application characteristics in their decision to select a particular wellness application, students rated usability-related characteristics the highest, followed by application cost and content quality. This study contributes to current research and practice in mobile wellness application design and the provision of mobile wellness services. In particular, it can inform application designers and intermediaries about which mobile wellness applications students use, and how students search for and select those applications.},
+  pdf={2015-LISR.pdf},
+  abbr={Journal},
+  preview={lisr.jpg}
+}
+
+
 @article{yang2015looking,
   title={Looking beyond the numbers: Bibliometric approach to analysis of LIS research in Korea},
   author={Yang, Kiduk and Lee, Jongwook and Choi, Wonchan},
@@ -519,21 +536,6 @@
   abbr={iConf},
 }
 
-@article{stvilia2015mobile,
-  title={Mobile wellness application-seeking behavior by college students—An exploratory study},
-  author={Stvilia, Besiki and Choi, Wonchan},
-  journal={Library \& Information Science Research},
-  volume={37},
-  number={3},
-  pages={201--208},
-  year={2015},
-  publisher={Elsevier},
-  doi={https://doi.org/10.1016/j.lisr.2015.04.007},
-  abstract={This research explored the mobile wellness application-seeking behavior of college students. In particular, it examined what sources students used to obtain wellness information, what wellness applications students used and for what purposes, how they learned about those applications, and what factors influenced their decision to choose a particular wellness application from multiple alternatives. The results indicated that students most often used websites as sources of wellness information, followed by mobile applications, family and friends, and then physicians. Students most often learned about wellness applications from search engines and application stores. Physicians were the least mentioned source of learning about mobile wellness applications. The most popular application type was calorie and activity trackers. In addition, when asked to rate the importance of various mobile application characteristics in their decision to select a particular wellness application, students rated usability-related characteristics the highest, followed by application cost and content quality. This study contributes to current research and practice in mobile wellness application design and the provision of mobile wellness services. In particular, it can inform application designers and intermediaries about which mobile wellness applications students use, and how students search for and select those applications.},
-  pdf={2015-LISR.pdf},
-  abbr={Journal},
-  preview={lisr.jpg}
-}
 
 @article{choi2014collegechoose,
   title={College Students' Value Structure of Choosing and Using Mobile Health/Wellness Applications: Preliminary Findings},
